fix minor bug + add z-indexes map

--- a/scss/components/dropdown.scss
+++ b/scss/components/dropdown.scss
@@ -23,7 +23,7 @@ $block: #{$fd-namespace}-dropdown;
     //LOCAL VARS (set all themeable properties, always include !default)
     $fd-dropdown-menu-color: solid 1px $fd-forms-color !default;
     $fd-dropdown-menu-border: solid 1px $fd-forms-border-color !default;
-    $fd-dropdown-menu-z-index: 2 !default;
+    $fd-dropdown-menu-z-index: map-get($fd-z-index-levels, "second") !default;
     $fd-dropdown-menu-background-color: fd-color(background) !default;
     $fd-dropdown-menu-shadow: 0 0 4px 1px rgba(fd-color(neutral, 2), 1) !default;
     //items
