--- a/scss/components/tile.scss
+++ b/scss/components/tile.scss
@@ -36,7 +36,7 @@ $block: #{$fd-namespace}-tile;
     &:hover {
       box-shadow: $fd-tile-box-shadow;
       position: relative;
-      z-index: 1;
+      z-index: map-get($fd-z-index-levels, "first");
     }
   }
   //STATES
