--- a/scss/components/toggle.scss
+++ b/scss/components/toggle.scss
@@ -43,7 +43,7 @@ $block: #{$fd-namespace}-toggle;
     width: $fd-toggle-switch-width;
     border-radius: 50%;
     position: absolute;
-    z-index: 2;
+    z-index: map-get($fd-z-index-levels, "second");
     top: 0;
     left: 0;
     right: 100%;
@@ -59,7 +59,7 @@ $block: #{$fd-namespace}-toggle;
     width: 100%;
     height: 71%;
     top: calc((100% - 71%) /2);
-    z-index: 1;
+    z-index: map-get($fd-z-index-levels, "first");
     border-color: transparent !important;
     border-radius: $fd-toggle-height/2;
     background-color: $fd-toggle-background-color;
