--- a/scss/layout/shell.scss
+++ b/scss/layout/shell.scss
@@ -61,7 +61,7 @@ $block: #{$fd-namespace}-shell;
     }
     &__header {
         position: absolute;
-        z-index: 1;
+        z-index: map-get($fd-z-index-levels, "first");
         // background: $fd-shellui-header-background-color;
         width: 100%;
         min-height: $fd-shellui-header-height;
